# hydent-lang

./: .gitignore  404.html  CONTRIBUTES.md  Cargo.toml  README.ja.md  README.md  TODO.txt  build.rs  index.html  precommit.sh  sitemap-0.xml  sitemap-index.xml
.github/workflows/: bench.yml  ci.yml  valid.yml
.idx/: airules.md  dev.nix
_astro/: Search.astro_astro_type_script_index_0_lang.DTUFjYKx.js  index.BON2wGBO.css  ui-core.CZqeoyYW.js
assets/: grammer.bnf  grammer.tibineko  grammer.txt  token_map.csv  tokenmap.csv
bench/report/: index.html
benches/: benches.rs  compiler.rs
benches/compiler/: front.rs  mod.rs
benches/report/: index.html
developers/: index.html
docs/: build_steps.md  ebnf.bnf  ebnf.txt  how_to_build.md
docs/000/: index.html
docs/001/: index.html
docs/contributers/: README.md
docs/reference/: index.md  non_terminal_characters.md
fib 20/base/: estimates.json  sample.json  tukey.json
fib 20/new/: estimates.json  tukey.json
fib 20/report/: index.html
not-yet/: index.html
pagefind/: pagefind-entry.json  pagefind.en_333dda3c6c.pf_meta  pagefind.en_e3cf37f7f1.pf_meta
pagefind/fragment/: en_23881ff.pf_fragment  en_3943d7f.pf_fragment  en_44b3831.pf_fragment  en_9e57766.pf_fragment  (+2 more)
reference/: index.html
script/: .gitignore  build.js  check.js  check.mjs  ci.js  ci.mjs  ci.sh  package-lock.json  package.json  setup_extension.sh  tsconfig.json
spec/: grammer.bnf  non-terminal-characters.txt  parser-functions.rs.txt  terminal-characters.txt
src/: lib.rs  main.rs
website/: astro.config.mjs  package-lock.json
(+293 files in other folders)
