[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
phf = { version = "0.13.1", features = ["macros"] }
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
clap = { version = "4.5.57", features = ["derive"] }
console = "0.16.2"
indicatif = "0.18.3"
